# 7z-to-chd

./: .gitignore  .pre-commit-config.yaml  7z_to_chd.py  CHANGELOG.md  LICENSE  README.md  __version__.py  convert.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
lib/: __init__.py  converter.py  extractor.py  playlist.py  utils.py
tests/: __init__.py  test_convert.py  test_utils.py  test_version.py
